@@ -1,3 +1,6 @@
+2021-10-01 Markus Gans  <guru.mail@muenster.de>
+	* The output buffer is now flushed before the terminal is scrolled
+
 2021-09-29 Markus Gans  <guru.mail@muenster.de>
 	* Faster FUnicode comparisons
 	* Less string comparison in FKeyboard
